--- a/.github/workflows/python-prepublish.yml
+++ b/.github/workflows/python-prepublish.yml
@@ -18,7 +18,7 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.x'
-      uses: pypa/gh-action-pypi-publish@master
+    - uses: pypa/gh-action-pypi-publish@master
       with:
         password: ${{ secrets.TEST_PYPI_API_TOKEN }}
         repository_url: https://test.pypi.org/simple/
