--- a/.github/workflows/python-prepublish.yml
+++ b/.github/workflows/python-prepublish.yml
@@ -1,11 +1,11 @@
 # This workflow will upload a Python Package using Twine when a release is created
 # For more information see: https://help.github.com/en/actions/language-and-framework-guides/using-python-with-github-actions#publishing-to-package-registries
 
-name: Upload Python Package
+name: Upload Pre-release Package
 
 on:
   release:
-    types: [prereleased]
+    types: [released]
 
 jobs:
   deploy:
@@ -18,7 +18,14 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.x'
-    - uses: pypa/gh-action-pypi-publish@master
-      with:
-        password: ${{ secrets.TEST_PYPI_API_TOKEN }}
-        repository_url: https://test.pypi.org/simple/
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install setuptools wheel twine
+    - name: Build and publish
+      env:
+        TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
+        TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+      run: |
+        python setup.py sdist bdist_wheel
+        twine upload --repository testpypi dist/*
