--- a/.github/workflows/python-prepublish.yml
+++ b/.github/workflows/python-prepublish.yml
@@ -1,11 +1,11 @@
 # This workflow will upload a Python Package using Twine when a release is created
 # For more information see: https://help.github.com/en/actions/language-and-framework-guides/using-python-with-github-actions#publishing-to-package-registries
 
-name: Upload Production Package
+name: Upload Pre-release Package
 
 on:
   release:
-    types: [released]
+    types: [prereleased]
 
 jobs:
   deploy:
@@ -28,4 +28,4 @@ jobs:
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
       run: |
         python setup.py sdist bdist_wheel
-        twine upload dist/*
+        twine upload --repository testpypi dist/*
